# SpecAnnotate

./: LICENSE  main.py  pyproject.toml
.junie/: guidelines.md
app/: main_window.py  spectrogram_widget.py  synth.py
spec_annotate/: cqt_settings_dialog.py  main_window.py  spectrogram_widget.py  synth.py
spec_annotate/utils/: cqt.py  midi.py
